--- a/M17_TP01_N02/bin/M17_TP01_N02.dll.config
+++ b/M17_TP01_N02/bin/M17_TP01_N02.dll.config
@@ -4,7 +4,16 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <connectionStrings>
+    <add name="sql" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\andre\OneDrive\Documentos\Visual Studio 2017\Projects\M17_TP01_N02\M17_TP01_N02\database\M17_TP01_N02.mdf;Integrated Security=True;Connect Timeout=30"/>
+  </connectionStrings>
   <system.web>
+    <globalization
+      culture="pt-PT"
+      uiCulture="pt-PT"
+      fileEncoding="utf-8"
+      requestEncoding="utf-8"
+      responseEncoding="utf-8" />
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
   </system.web>
