--- a/M17_TP01_N02/Web.config
+++ b/M17_TP01_N02/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="sql" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=..\M17_TP01_N02.mdf;Integrated Security=True;Connect Timeout=30"/>
+    <add name="sql" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\andre\OneDrive\Documentos\Visual Studio 2017\Projects\M17_TP01_N02\M17_TP01_N02\database\M17_TP01_N02.mdf;Integrated Security=True;Connect Timeout=30"/>
   </connectionStrings>
   <system.web>
     <globalization
